create 'start' scripts for day 7

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"start:05-1": "npx ts-node src/day_05/day_05-1.ts",
 		"start:05-2": "npx ts-node src/day_05/day_05-2.ts",
 		"start:06-1": "npx ts-node src/day_06/day_06-1.ts",
-		"start:06-2": "npx ts-node src/day_06/day_06-2.ts"
+		"start:06-2": "npx ts-node src/day_06/day_06-2.ts",
+		"start:07-1": "npx ts-node src/day_07/day_07-1.ts",
+		"start:07-2": "npx ts-node src/day_07/day_07-2.ts"
 	},
 	"keywords": [],
 	"author": "",
