create 'start' scripts for day 8

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"start:06-1": "npx ts-node src/day_06/day_06-1.ts",
 		"start:06-2": "npx ts-node src/day_06/day_06-2.ts",
 		"start:07-1": "npx ts-node src/day_07/day_07-1.ts",
-		"start:07-2": "npx ts-node src/day_07/day_07-2.ts"
+		"start:07-2": "npx ts-node src/day_07/day_07-2.ts",
+		"start:08-1": "npx ts-node src/day_08/day_08-1.ts",
+		"start:08-2": "npx ts-node src/day_08/day_08-2.ts"
 	},
 	"keywords": [],
 	"author": "",
