create 'start' scripts for day 9

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"start:07-1": "npx ts-node src/day_07/day_07-1.ts",
 		"start:07-2": "npx ts-node src/day_07/day_07-2.ts",
 		"start:08-1": "npx ts-node src/day_08/day_08-1.ts",
-		"start:08-2": "npx ts-node src/day_08/day_08-2.ts"
+		"start:08-2": "npx ts-node src/day_08/day_08-2.ts",
+		"start:09-1": "npx ts-node src/day_09/day_09-1.ts",
+		"start:09-2": "npx ts-node src/day_09/day_09-2.ts"
 	},
 	"keywords": [],
 	"author": "",
